# factory-excel-ops-dashboard

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  agent_interface.json  integration_interface.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  profile_request.yml
.github/workflows/: ci.yml
config/: sample_field_mapping.json  sample_file_types.json  sample_metrics.json
docs/: .nojekyll  adapter_integration_guide.md  agent_interface.md  architecture.md  configuration_cookbook.md  data_safety_checklist.md  github_maintenance.md  index.html  integration_interface.md  private_adapter_guide.md  product_evolution.md  quality_gates.md  release_checklist.md  roadmap.md  showcase.html  showcase_design_benchmark.md  table_adaptation.md  threat_model.md  version_history.md
sample_data/: README.md  demand_demo.csv  demand_sample.csv  fulfillment_demo.csv  fulfillment_sample.csv  inventory_demo.csv  inventory_sample.csv  production_demo.csv  purchase_plan_demo.csv  replenishment_demo.csv  replenishment_sample.csv  sales_orders_demo.csv  shipment_demo.csv  work_output_sample.csv
scripts/: package_project.cmd  package_project.py  run_demo.cmd  run_sample.cmd
src/factory_excel_ops/: __init__.py  adapter_builder.py  agent_interface.py  analysis_agent.py  analysis_context.py  classifier.py  cli.py  dashboard.py  field_mapper.py  ingest.py  (+5 more)
tests/: test_adapter_builder.py  test_demo_pipeline.py  test_packaging.py  test_sample_pipeline.py  test_validation.py
